# pkg/routes/auth.go
@@ -8,4 +8,5 @@ import (
 func AuthRoutes(group *echo.Group) {
 	group.POST("/login", controllers.Login)
 	group.POST("/register", controllers.Register)
+	group.GET("/anonymous-token", controllers.GetAnonymousToken)
 }
